Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2256

Mem stats info is bad when enable reclaimable-freelist

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • Core
    • None

    Description

      in-use column should not larger than allocated column:

           allocated      |        in-use      | type size  |   free list name
      --------------------|--------------------|------------|----------------------------------
               1262485504 |         1384120320 |    2097152 | memory/ioBufAllocator[14]
               1631584256 |         1631584256 |    1048576 | memory/ioBufAllocator[13]
               3499098112 |         3499098112 |     524288 | memory/ioBufAllocator[12]
               3143368704 |         3152805888 |     262144 | memory/ioBufAllocator[11]
               3666870272 |         3670016000 |     131072 | memory/ioBufAllocator[10]
               5821628416 |         5823528960 |      65536 | memory/ioBufAllocator[9]
               4722393088 |         4781408256 |      32768 | memory/ioBufAllocator[8]
               1790443520 |         1794113536 |      16384 | memory/ioBufAllocator[7]
                706764800 |          710148096 |       8192 | memory/ioBufAllocator[6]
                367280128 |          397934592 |       4096 | memory/ioBufAllocator[5]
                   320000 |             436224 |        512 | memory/ioBufAllocator[2]
                    30464 |              40448 |        256 | memory/ioBufAllocator[1]
                        0 |                  0 |        432 | memory/PeerReadDataAllocator
                        0 |                  0 |        288 | memory/FetchSMAllocator
                        0 |                  0 |        192 | memory/prefetchUrlEntryAllocator
                 22705280 |           25299200 |        640 | memory/httpClientSessionAllocator
                 12524160 |           25048320 |       9488 | memory/httpSMAllocator
                        0 |                  0 |       9552 | memory/httpUpdateSMAllocator
                        0 |                  0 |        560 | memory/HCSMAllocator
                        0 |                  0 |        144 | memory/CongestionDBContAllocator
                  7106560 |           11624448 |       2048 | memory/hdrHeap
                    48256 |             626912 |        208 | memory/httpCacheAltAllocator
                   136320 |            3517056 |       2272 | memory/hostDBContAllocator
                   135424 |             135424 |      33856 | memory/dnsBufAllocator
                   192128 |            1956672 |       1264 | memory/dnsEntryAllocator
                        0 |                  0 |         16 | memory/DNSRequestDataAllocator
                   357600 |             633600 |        400 | memory/cacheContAllocator
                  1171104 |            2593184 |        352 | memory/custerCacheVCAllocator
                      768 |              97536 |         32 | memory/byteBankAllocator
      

      Attachments

        Activity

          People

            yunkai Yunkai Zhang
            yunkai Yunkai Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: