TS-2256: Mem stats info is bad when enable reclaimable-freelist

1) Rename InkFreeList->count to InkFreeList->used, which could make
   it more readable.

2) Fix mem stats in reclaimable freelist -- I misunderstood the meaning
   of InkFreelist->count before.

Signed-off-by: Yunkai Zhang <qiushu.zyk@taobao.com>